--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
           "options": {
             "outputPath": "dist/Project-Thing-API",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "main": "server/app.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Project-Thing-API:build"
+            "browserTarget": "Project-Thing-API:build",
+            "port": 3000
           },
           "configurations": {
             "production": {
@@ -79,7 +80,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
+            "main": "server/app.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
