--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "webpack --config config/config.js --progress --profile",
+    "build:dev": "export NODE_ENV=development || SET \"NODE_ENV=development\" && npm run build --",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,9 +20,24 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@decorators/di": "^1.0.2",
+    "@decorators/express": "^2.3.0",
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.1",
+    "@types/multer": "^1.3.7",
+    "awesome-typescript-loader": "^5.2.1",
+    "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "multer": "^1.4.1",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.7.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "tslint-loader": "^3.5.4",
+    "webpack": "^4.29.5",
+    "webpack-node-externals": "^1.7.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -29,9 +45,9 @@
     "@angular/cli": "~7.3.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -43,6 +59,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "webpack-cli": "^3.2.3"
   }
 }
