--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.0",
     "multer": "^1.4.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
