--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/multer": "^1.3.7",
     "awesome-typescript-loader": "^5.2.1",
     "body-parser": "^1.18.3",
+    "circular-json": "^0.5.9",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
