register and login
messy

--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.0",
+    "mssql": "^5.0.3",
     "multer": "^1.4.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "tslint-loader": "^3.5.4",
+    "uuid": "^3.3.2",
     "webpack": "^4.29.5",
     "webpack-node-externals": "^1.7.2",
     "zone.js": "~0.8.26"
