--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.0",
     "mssql": "^5.0.3",
     "multer": "^1.4.1",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
     "rxjs": "~6.3.3",
